# PackmolCpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  configure  fpm.toml  pixi.toml  pyproject.toml  update_version.sh
.github/workflows/: actions.yml  build-wheels.yaml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
app/: packmol.f90
docs/plans/: 2026-03-12-packmol-workflow-skills-design.md  2026-03-12-remaining-fortran-tests.md  2026-03-13-gencan-cpp-migration-implementation.md
python/: hatch_build.py
python/packmol/: __init__.py  cli.py
python/tests/: test_packmol.py
scripts/: generate_inventory.py
skills/: README.md
skills/fortran-baseline-testing/: SKILL.md
skills/fortran-to-cpp-migration/: SKILL.md
src/: ahestetic.f90  cell_indexing.f90  cenmass.f90  checkpoint.f90  cli_parser.f90  comparegrad.f90  comprest.f90  compute_data.f90  computef.f90  computeg.f90  exit_codes.f90  flashmod.f90  flashsort.f90  fparc.f90  gencan.f  gencan_cpp_bridge.f90  gencan_ieee_signal_routines.f90  getinp.f90  gparc.f90  gwalls.f90  heuristics.f90  initial.f90  input.f90  output.f90  pbc.f90  pgencan.f90  polartocart.f90  random.f90  resetcells.f90  restmol.f90  setsizes.f90  sizes.f90  strlength.f90  swaptype.f90  swaptypemod.f90  title.f90  tobar.f90  usegencan.f90  writesuccess.f90
src/cpp/gencan/: bridge.cpp
src/gencan/: cg.f  cg_bridge.f90  easygencan.f  eval_callbacks.f  eval_callbacks_bridge.f90  gencan_bridge.f90  gencan_driver.f  numeric_utils.f  numeric_utils_bridge.f90  reduced_wrappers.f  reduced_wrappers_bridge.f90  spgls.f  spgls_bridge.f90  tnls.f  tnls_bridge.f90  vector_ops.f
testing/: Project.toml  install_julia.sh  runtests.jl  test.sh  test_cli.sh  test_connectivity.sh  test_failed.sh
testing/input_files/: benzene2.inp  bilayer.inp  bilayer_pbc.inp  ieee_signaling.inp  mixture.inp  mixture_pbc.inp  only_one_fixed.inp  protein_outside_pbc_error.inp  solvprotein.inp  solvprotein_pbc.inp  spherical.inp  spherical_pbc.inp  toy_with_fixed.inp  water_box.inp  water_box_conect.inp  water_box_failed.inp  water_box_pbc.inp  water_box_pbc2.inp  water_box_pbc_negative_coordinates.inp  water_box_pbc_outside_box.inp  water_box_pbc_slab.inp
tests/: CMakeLists.txt
tests/component/: check_cli_parser_functions.py  check_comparegrad.py  check_failopen.py  check_output_files.py  check_output_messages.py  test_checkpoint_probe.f90  test_cli_parser_functions_probe.f90  test_cli_parser_probe.f90  test_comparegrad_probe.f90  test_constraint_kernels.f90  test_core_evaluators.f90  test_discret.f90  test_failopen_probe.f90  test_gencan_cpp_bridge.f90  test_getinp.f90  test_getkeywords.f90  test_initial.f90  test_input_helpers.f90  test_molecule_centers.f90  test_movebad.f90  test_output_messages_probe.f90  test_output_probe.f90  test_packmolprecision.f90  test_pgencan.f90  test_resetcells.f90  test_restmol.f90  test_setsizes.f90  test_swaptype.f90  test_write_connect.f90
tests/fixtures/: fort.10  input.inp  minimal_packmol.inp  tiny_packing.inp
tests/gencan/: check_cg_ab.py  check_easygencan_ab.py  check_gencan_ab.py  check_gencan_ab_no_fallback.py  check_gencan_entry_stop_ab.py  check_gencan_no_fallback_matrix.py  check_spg_post_handoff.py  check_spg_post_handoff_drift.py  check_spgls_ab.py  check_tn_cpp_replay_forced_no_fortran.py  check_tn_cpp_replay_no_fortran.py  check_tn_handoff_drift.py  check_tn_handoff_matrix.py  check_tn_handoff_unsafe_legacy_off.py  check_tnls_ab.py  check_tnls_extrap_ab.py  test_cg.f90  test_cg_ab_probe.f90  test_cg_general_ab_probe.f90  test_cg_limits.f90  test_cg_nqmp_ab_probe.f90  test_cg_nqmpstop_ab_probe.f90  test_cg_samep_ab_probe.f90  test_easygencan.f90  test_easygencan_ab_probe.f90  test_gencan_ab_probe.f90  test_gencan_calchd.f90  test_gencan_driver.f90  test_gencan_entry_stop_ab_probe.f90  test_gencan_entry_stop_gtype2_ab_probe.f90  test_gencan_entry_stop_inform2_ab_probe.f90  test_gencan_entry_stop_inform3_ab_probe.f90  test_gencan_eval_wrappers.f90  test_gencan_hessian_diff.f90  test_gencan_runtime_driver_probe.f90  test_gencan_spg_post_ab_probe.f90  test_gencan_vector_ops.f90  test_gencan_wrappers.f90  test_spgls.f90  test_spgls_ab_probe.f90  (+18 more)
tests/inventory/: CHECKLIST.md  procedures.json
tests/support/: test_assertions.f90  test_runtime_setup.f90
tests/unit/: test_cell_indexing.f90  test_flashsort.f90  test_geometry.f90  test_ieee_signal.f90  test_jacobi.f90  test_output_helpers.f90  test_pbc.f90  test_random.f90  test_strings.f90
